<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <ImageView
        android:id="@+id/ivFoto"
        android:layout_width="161dp"
        android:layout_height="137dp"
        android:layout_marginStart="16dp"
        android:layout_marginLeft="16dp"
        android:layout_marginTop="12dp"
        android:contentDescription="@string/firmapequena"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/ic_menu_gallery" />

    <TextView
        android:id="@+id/tvNombre"
        android:layout_width="227dp"
        android:layout_height="62dp"
        android:layout_marginStart="200dp"
        android:layout_marginLeft="200dp"
        android:layout_marginTop="16dp"
        android:text="@string/textview"
        android:textSize="18sp"
        app:layout_constraintStart_toStartOf="@+id/ivFoto"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/tvApellido"
        android:layout_width="226dp"
        android:layout_height="59dp"
        android:layout_marginStart="40dp"
        android:layout_marginLeft="40dp"
        android:layout_marginTop="88dp"
        android:text="@string/textview2"
        android:textSize="18sp"
        app:layout_constraintStart_toEndOf="@+id/ivFoto"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/tvFecha"
        android:layout_width="266dp"
        android:layout_height="62dp"
        android:layout_marginStart="12dp"
        android:layout_marginLeft="12dp"
        android:layout_marginTop="16dp"
        android:layout_marginEnd="17dp"
        android:layout_marginRight="17dp"
        android:text="@string/textview3"
        android:textSize="18sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.733"
        app:layout_constraintStart_toEndOf="@+id/tvApellido"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/tvFechaSalida"
        android:layout_width="263dp"
        android:layout_height="65dp"
        android:layout_marginStart="13dp"
        android:layout_marginLeft="13dp"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="19dp"
        android:layout_marginRight="19dp"
        android:text="@string/textview"
        android:textSize="18sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.806"
        app:layout_constraintStart_toEndOf="@+id/tvApellido"
        app:layout_constraintTop_toBottomOf="@+id/tvFecha" />
</androidx.constraintlayout.widget.ConstraintLayout>