<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".Fragmentos.Fragment_Exportar" >

    <EditText
        android:id="@+id/etPlannedDate"
        android:layout_width="770dp"
        android:layout_height="73dp"
        android:layout_marginTop="100dp"
        android:autofillHints=""
        android:clickable="true"
        android:focusable="true"
        android:gravity="center_horizontal"
        android:hint="@string/fecha_de_inicio"
        android:inputType="date"
        android:maxLines="1"
        android:textAlignment="center"
        android:textSize="24sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <EditText
        android:id="@+id/etDeadline"
        android:layout_width="765dp"
        android:layout_height="87dp"
        android:layout_marginTop="92dp"
        android:autofillHints=""
        android:clickable="true"
        android:focusable="true"
        android:gravity="center_horizontal"
        android:hint="@string/fecha_de_fin"
        android:inputType="date"
        android:maxLines="1"
        android:textAlignment="center"
        android:textSize="24sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/etPlannedDate" />

    <Button
        android:id="@+id/btnExportar"
        android:layout_width="187dp"
        android:layout_height="87dp"
        android:layout_marginStart="156dp"
        android:layout_marginLeft="156dp"
        android:layout_marginTop="80dp"
        android:layout_marginEnd="161dp"
        android:layout_marginRight="161dp"
        android:text="@string/exportar"
        android:textSize="18sp"
        app:backgroundTint="#167A00"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/etDeadline" />
</androidx.constraintlayout.widget.ConstraintLayout>